--- a/DL/DLW06A_part1.ipynb
+++ b/DL/DLW06A_part1.ipynb
@@ -112,7 +112,6 @@
         "  guessing_game(word_hints)"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "68fDLUnZs8KF"
       },
       "execution_count": null,
@@ -159,7 +158,6 @@
         "  return Audio(\"K-audio.mp3\")"
       ],
       "metadata": {
-        "cellView": "form",
         "id": "TajMEehr8_7D"
       },
       "execution_count": null,
@@ -250,10 +248,36 @@
       ],
       "metadata": {
         "cellView": "form",
-        "id": "ZjPSWFub-55P"
+        "id": "ZjPSWFub-55P",
+        "outputId": "347b7c4c-263b-4d5c-ee4c-089b42219ec4",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 297
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Type a sentence containing a be verb: e.g., I am a students.\n",
+            "i am a girl.\n",
+            "Type a sentence that contains a be verb.\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-2-fa0ac3100695>\u001b[0m in \u001b[0;36m<cell line: 58>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     56\u001b[0m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Type a sentence that contains a be verb.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     57\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 58\u001b[0;31m \u001b[0metts\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmytext\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     59\u001b[0m \u001b[0mAudio\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"E-audio.mp3\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mautoplay\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;32mTrue\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'etts' is not defined"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
@@ -414,7 +438,9 @@
         "\n",
         "+ **a module** is a single tool, (e.g., random) \n",
         "+ **a package** is a toolbox containing multiple tools (e.g., gTTS)\n",
-        "+ **a library** is a set of toolboxes designed for a specific purpose. (e.g., nltk - Natural Language Tool Kit) _>> Next time_"
+        "+ **a library** is a set of toolboxes designed for a specific purpose. (e.g., nltk - Natural Language Tool Kit) _>> Next time_\n",
+        "###library가 package보다 더 큰 단위 \n",
+        "### module -> package -> library"
       ],
       "metadata": {
         "id": "wgZEzhkQwzc3"
@@ -684,7 +710,8 @@
     {
       "cell_type": "code",
       "source": [
-        "type(a2) # data type of the variable a2"
+        "type(a2) # data type of the variable a2\n",
+        "#a2의 함수 종류는 strings"
       ],
       "metadata": {
         "colab": {
@@ -846,7 +873,8 @@
     {
       "cell_type": "markdown",
       "source": [
-        "x2[index]: Python index starts from 0"
+        "x2[index]: Python index starts from 0\n",
+        "#중요"
       ],
       "metadata": {
         "id": "xcPyj0Fesdiu"
@@ -1488,7 +1516,7 @@
         "id": "IUtU-qG81XIt",
         "outputId": "41c6e85b-14a8-4ba0-aa44-ef40197c087f"
       },
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1522,7 +1550,7 @@
         "id": "ZAhdPbqVKr6e",
         "outputId": "fe5a5554-7f48-4c89-d78b-369bc994e7be"
       },
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -1559,7 +1587,7 @@
         "id": "xbF1sJB9MIpw",
         "outputId": "0821b1c0-263e-4d4b-bb2a-cc6ccf6ac171"
       },
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1586,7 +1614,7 @@
         "id": "IudKgTjkMVQP",
         "outputId": "0b8ce67e-2816-4cc4-c184-66fe0fa94ab7"
       },
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1610,7 +1638,7 @@
       "metadata": {
         "id": "tGBOKKKtLvj7"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -1626,7 +1654,7 @@
         "id": "c11AXGr0V_a4",
         "outputId": "b01a3ae2-a445-4b13-c5ad-9815e177e5e9"
       },
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1664,7 +1692,7 @@
         "id": "tZA7DsPPWGmA",
         "outputId": "3d26e883-aa98-4edd-e37d-9422f6394516"
       },
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1694,7 +1722,7 @@
         "id": "EjLtWSL5WdYy",
         "outputId": "93ac8987-602c-4d60-a1a9-cd24d44185fb"
       },
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1734,7 +1762,7 @@
         "id": "JGqTVM22MuH0",
         "outputId": "3360e15b-b0d4-4abc-f7e8-86999a043d3a"
       },
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1764,7 +1792,7 @@
         "id": "fP2lBss3Myhq",
         "outputId": "abde6cc3-e4e5-4415-f0a5-83767e291b5a"
       },
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1803,7 +1831,7 @@
         "id": "HmuiXLZSNGNa",
         "outputId": "569d77fa-a4a0-490b-ac8d-8e2f86049642"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1830,7 +1858,7 @@
         "id": "xiyozLYxM6xk",
         "outputId": "666170f2-0ada-45fb-d0c6-315f6cda5ba1"
       },
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1860,7 +1888,7 @@
         "id": "AY_Ii7FhNeof",
         "outputId": "834e67aa-b2dd-4d83-9f6c-ba34b9ed5293"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1890,7 +1918,7 @@
           "height": 35
         }
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1921,7 +1949,7 @@
           "height": 35
         }
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1951,7 +1979,7 @@
           "height": 35
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1983,7 +2011,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -2029,7 +2057,7 @@
           "height": 248
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
