Colaboratory를 통해 생성됨

--- a/Untitled1.ipynb
+++ b/Untitled1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMIybo021d22ILq5oHA8ONv",
+      "authorship_tag": "ABX9TyNhSrHLoECjOEkEacIOzhpf",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -447,7 +447,7 @@
         "id": "kzyiMb-UH9QG",
         "outputId": "60dda76d-3b7e-472f-a6e3-1c4bff4c250c"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -565,6 +565,328 @@
           "text": [
             "Mary is friendly.\n"
           ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**data.split**"
+      ],
+      "metadata": {
+        "id": "XxjtE8LcsCbB"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = \"mary is friendly.\"\n",
+        "a1 = a.split()\n",
+        "print(a1)"
+      ],
+      "metadata": {
+        "id": "N2dhhw21sE0N",
+        "outputId": "86e55d4b-229b-4770-a054-efdfc6ead971",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['mary', 'is', 'friendly.']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = \"out-of-date\"\n",
+        "a1 = a.split('-')\n",
+        "print(a1)"
+      ],
+      "metadata": {
+        "id": "JmKpJJvMsRMd",
+        "outputId": "3e1f1046-13be-4b21-b68b-d06cc4a014ad",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "['out', 'of', 'date']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**' '.join()**"
+      ],
+      "metadata": {
+        "id": "LKlC4OKjssr2"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "wordlist = ['mary','is','smart']\n",
+        "' '.join(wordlist)"
+      ],
+      "metadata": {
+        "id": "b7OYBtKnswyC",
+        "outputId": "c0a90615-eefd-468b-ff1f-57c8418595e1",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 36
+        }
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'mary is smart'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 10
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**'mary'라는 단어의 첫글자만 대문자로 나타내기**"
+      ],
+      "metadata": {
+        "id": "7h4VpR8Bu6jM"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "w = \"mary\"\n",
+        "f = w[0].upper() + w[1:]\n",
+        "print(f)"
+      ],
+      "metadata": {
+        "id": "ZWndg2ZdvAzz",
+        "outputId": "d41b9768-ce61-48c3-ad0c-2b12e511987a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 13,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mary\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**for loops 함수**"
+      ],
+      "metadata": {
+        "id": "mvk991Hnv3W9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "numbers = [1,2,3,4,5]\n",
+        "for num in numbers:\n",
+        "  print(num**2)\n",
+        "  #square는 제곱을 의미한다. (**로 표시한다.)"
+      ],
+      "metadata": {
+        "id": "m9zQE51Nv7IG",
+        "outputId": "18c676ea-0c1a-4830-ed86-4f2bd51b0abf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1\n",
+            "4\n",
+            "9\n",
+            "16\n",
+            "25\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**출석부 DIY**"
+      ],
+      "metadata": {
+        "id": "Jul_kj9mxoTY"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "num_names = input(\"How many names?\")\n",
+        "num_names = int(num_names)\n",
+        "\n",
+        "attendance = []\n",
+        "\n",
+        "for i in range(0,num_names):\n",
+        "  name = input()\n",
+        "  attendance.append(name)\n",
+        "\n",
+        "  print(attendance)"
+      ],
+      "metadata": {
+        "id": "qSQKHKLoxrlO",
+        "outputId": "c4f16559-8e58-46c4-df74-631c24c56655",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "How many names?3\n",
+            "김은혜\n",
+            "['김은혜']\n",
+            "방선형\n",
+            "['김은혜', '방선형']\n",
+            "안소미\n",
+            "['김은혜', '방선형', '안소미']\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Demo {gtts}**"
+      ],
+      "metadata": {
+        "id": "zMt__6vMzW8z"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!pip install gTTS\n",
+        "from gtts import gTTS \n",
+        "from IPython.display import Audio\n",
+        "\n",
+        "def tts(text):\n",
+        "  gtts_object = gTTS(text,lang =\"en\", slow = True)\n",
+        "  gtts_object.save(\"myaudio.mp3\")\n",
+        "  return Audio(\"myaudio.mp3\")"
+      ],
+      "metadata": {
+        "id": "9zMhTKWNzZdq",
+        "outputId": "dffa2ded-ec4d-4d5f-f254-170897bfb36f",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Looking in indexes: https://pypi.org/simple, https://us-python.pkg.dev/colab-wheels/public/simple/\n",
+            "Collecting gTTS\n",
+            "  Downloading gTTS-2.3.2-py3-none-any.whl (28 kB)\n",
+            "Requirement already satisfied: requests<3,>=2.27 in /usr/local/lib/python3.10/dist-packages (from gTTS) (2.27.1)\n",
+            "Requirement already satisfied: click<8.2,>=7.1 in /usr/local/lib/python3.10/dist-packages (from gTTS) (8.1.3)\n",
+            "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.10/dist-packages (from requests<3,>=2.27->gTTS) (1.26.15)\n",
+            "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.10/dist-packages (from requests<3,>=2.27->gTTS) (2022.12.7)\n",
+            "Requirement already satisfied: charset-normalizer~=2.0.0 in /usr/local/lib/python3.10/dist-packages (from requests<3,>=2.27->gTTS) (2.0.12)\n",
+            "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.10/dist-packages (from requests<3,>=2.27->gTTS) (3.4)\n",
+            "Installing collected packages: gTTS\n",
+            "Successfully installed gTTS-2.3.2\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "**Demo calculator**"
+      ],
+      "metadata": {
+        "id": "YrQaUwmd8o2z"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def add(x,y) :\n",
+        "  return x+y\n",
+        "def substract(x,y):\n",
+        "  return x-y\n",
+        "def multiply(x,y):\n",
+        "  return(x*y)\n",
+        "def divide(x,y):\n",
+        "  return(x/4)"
+      ],
+      "metadata": {
+        "id": "LqeGAYVu8vpU"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "add(2,3)\n",
+        "#test"
+      ],
+      "metadata": {
+        "id": "hZXvPbE39L0x",
+        "outputId": "1c9f1eda-147e-4622-bbac-836fda764bd6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 22,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "5"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 22
         }
       ]
     }
